--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<nav><ul><a href="structure">Day Structure</a></ul><ul><a href="team">Team</a></ul><ul><a href="schedule">Schedule</a></ul></nav>
-<h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive">IronSkydive</h1>
-<h2>Let the trip begin</h2>
-<aside>"The best experience of our lives"<br>Ariel Quiñones & Gonzalo Manrique</aside>
-<article><h3>Hello!</h3><p> Welcome to IronSkydive, the best adventure you will ever have.</p><a href="#">Learn more</a></article>
-<ariticle><h3>About us</h3> <p>We like a lot programming, but we also love to practice sport.</p><a href="#">Watch Video</a></ariticle>
-<ariticle><h3>Wanna join?</h3> <p>Join our fitness program to be in good shape while learning.</p><a href="#">Register</a></ariticle>
+<nav class="nav-bar"><ul><a href="structure">Day Structure</a></ul><ul><a href="team">Team</a></ul><ul><a href="schedule">Schedule</a></ul></nav class=nav-bar>
+<header class="head">
+    <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive">IronSkydive</h1>
+    <h2>Let the trip begin</h2>
+    <aside class="quote">"The best experience of our lives"<br>Ariel Quiñones & Gonzalo Manrique</aside>
+</header>
+<section class="section1">
+<article class="text"><h3>Hello!</h3><p> Welcome to IronSkydive, the best adventure you will ever have.</p><a href="#" class="link-btn">Learn more</a></article>
+<ariticle class="text"><h3>About us</h3> <p>We like a lot programming, but we also love to practice sport.</p><a href="#"class="link-btn">Watch Video</a></ariticle>
+<ariticle class="text"><h3>Wanna join?</h3> <p>Join our fitness program to be in good shape while learning.</p><a href="#"class="link-btn">Register</a></ariticle>
+</section class="section1">
+<section class="section2">
 <h3>How do we structure the day?</h3>
-<div><article><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="1. Training"><h4>1. Training</h4><p>We teach all the necessary things to jump from a plane without any kind of problem.</p></article></div>
-<div><article><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png" alt="2. Get ready"><h4>2. Get ready</h4><p>You are already prepared, you just need the suit and the parachute. All sizes available.</p></article></div>
-<div><article><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="3. Fly"><h4>3. Fly</h4><p>You are ready, and the plane is waiting for us in the hangar. Let's fly!</p></article></div>
-<div><article><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="4. Jump!"><h4>4. Jump!</h4><p>You have done the most complicated. Just one step left... jump!</p></article></div>
+<div><article><img class="service-box-img" src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="1. Training"><h4>1. Training</h4><p>We teach all the necessary things to jump from a plane without any kind of problem.</p></article></div>
+<div><article><img class="service-box-img" src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png" alt="2. Get ready"><h4>2. Get ready</h4><p>You are already prepared, you just need the suit and the parachute. All sizes available.</p></article></div>
+<div><article><img class="service-box-img" src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="3. Fly"><h4>3. Fly</h4><p>You are ready, and the plane is waiting for us in the hangar. Let's fly!</p></article></div>
+<div><article><img class="service-box-img" src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="4. Jump!"><h4>4. Jump!</h4><p>You have done the most complicated. Just one step left... jump!</p></article></div>
+</section class="section2">
 <h3>Team</h3>
 <p>Our team collectively has 75 years of experience. Odds are, when you jump out of the plane with this guys (and girls), you won't go splat.</p>
 <div><article><h4>Harold Rothstein</h4><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harold Rothstein"></a></article></div>
@@ -58,10 +64,11 @@
 <h3>Schedule a Time Slot</h3>
 <Footer><section><h5>Contact information <br>
     <address>IronSkydive <br>
-         33 Ru la Fayette, <br>
+         33 Rue la Fayette, <br>
          75009 Paris, <br>
          France <br>
          +33(0)619193088 <br><h5>Follow us</h5> <ul><a target="blank" href="#">Twitter</a></ul> 
          <ul><a target="blank" href="#">Facebook</a></ul>
          <ul><a target="blank" href="#">Instagram</a></ul>
 </address></h5></section></Footer>
+<link rel="stylesheet" href="styles.css">
