--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <header class="head">
     <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive">IronSkydive</h1>
     <h2>Let the trip begin</h2>
-    <aside class="quote">"The best experience of our lives"<br>Ariel Quiñones & Gonzalo Manrique</aside>
+    <aside class="quote">"The best experience of our lives"<br>Ariel Quiñones & Gonzalo Manrique, Ironhack founders</aside>
 </header>
 <section class="section1">
 <article class="text"><h3>Hello!</h3><p> Welcome to IronSkydive, the best adventure you will ever have.</p><a href="#" class="link-btn">Learn more</a></article>
@@ -16,12 +16,14 @@
 <div><article><img class="service-box-img" src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="3. Fly"><h4>3. Fly</h4><p>You are ready, and the plane is waiting for us in the hangar. Let's fly!</p></article></div>
 <div><article><img class="service-box-img" src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="4. Jump!"><h4>4. Jump!</h4><p>You have done the most complicated. Just one step left... jump!</p></article></div>
 </section class="section2">
+<Section class="section3">
 <h3>Team</h3>
-<p>Our team collectively has 75 years of experience. Odds are, when you jump out of the plane with this guys (and girls), you won't go splat.</p>
-<div><article><h4>Harold Rothstein</h4><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harold Rothstein"></a></article></div>
-<div><article><h4>Susan Phillips</h4><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="Susan Phillips"></article></div>
-<div><article><h4>Taylor Roberts</h4><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="Taylor Roberts"></article></div>
+<p class="section-text">Our team collectively has 75 years of experience. Odds are, when you jump out of the plane with this guys (and girls), you won't go splat.</p>
 <hr>
+<div><article><h4 class="team-member">Harold Rothstein</h4><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" class="team-img" alt="Harold Rothstein"></a></article></div>
+<div><article><h4 class="team-member">Susan Phillips</h4><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" class="team-img" alt="Susan Phillips"></article></div>
+<div><article><h4 class="team-member">Taylor Roberts</h4><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" class="team-img" alt="Taylor Roberts"></article></div>
+</Section class="section3">
 <h3><table>Schedule</h3>
     <tr>
         <th>Time</th>
@@ -62,13 +64,25 @@
     </table>    
 
 <h3>Schedule a Time Slot</h3>
-<Footer><section><h5>Contact information <br>
-    <address>IronSkydive <br>
+
+<footer class="ending">
+    <section class="section4">
+        <h5>Contact information <br>
+    IronSkydive <br>
+    <address class="address">
          33 Rue la Fayette, <br>
          75009 Paris, <br>
          France <br>
-         +33(0)619193088 <br><h5>Follow us</h5> <ul><a target="blank" href="#">Twitter</a></ul> 
-         <ul><a target="blank" href="#">Facebook</a></ul>
-         <ul><a target="blank" href="#">Instagram</a></ul>
-</address></h5></section></Footer>
+         +33(0)619193088 <br>
+        </address class="address">
+         <h5>Follow us</h5> 
+        </section class=section4>
+         <ul><a target="blank" href="#">Twitter</a></ul class="social-media"> 
+         <ul><a target="blank" href="#">Facebook</a></ul class="social-media">
+         <ul><a target="blank" href="#">Instagram</a></ul class="social-media">
+</address class=adress></h5></section></Footer>
 <link rel="stylesheet" href="styles.css">
+</footer>
+<ending class="dark-background footer">
+     <!-- ... -->
+     </footer>
