--- a/Lab week 2/index.html
+++ b/Lab week 2/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
+<a href="styles.css"></a>
+<header>
+  <h1>Apple Pie</h1>
+  <img
+    src="https://github.com/ironhack-labs/lab-css-recipes-clone/blob/master/apple-pie/images/apple-pie.jpg?raw=true"
+    alt="Apple Pie"
+  />
+  <section>
+    <p>
+      This was my grandmother's apple pie recipe. I have never seen another one
+      quite like it. It will always be my favorite and has won me several first
+      place prizes in local competitions. I hope it becomes one of your
+      favorites as well!
+    </p>
+  </section>
+</header>
